--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -134,6 +134,17 @@ hr {
   padding-left: 15px;
 }
 
+.company-logo > img {
+  width: 100%;
+  height: 100%;
+  /* height: 190px; */
+}
+
+.companylist-content {
+  /* background-color: #f4f5fa; */
+  width: 100%;
+}
+
 .img, .post, .comp, .small-desc {
   border: 1px solid black;
   padding: 0;
@@ -236,6 +247,7 @@ hr {
 
 .apply-form {
   border-color: #eee;
+  transition: 0.6s all;
   /* margin-top: 20px; */
 }
 
