--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -470,8 +470,13 @@ th {
   padding: 20px 0;
 }
 
+.slide-form {
+  transition: 0.6s all;
+}
+
 .login-form {
   /* padding: 60px; */
+  transition: 0.6s all;
   padding: 20px 20px 60px 20px;
   border-color : #bbb;
   -webkit-box-shadow: 10px 10px 153px -5px rgba(0,0,0,0.75);
@@ -760,6 +765,22 @@ th {
   border-color: #eee;
   transition: 0.6s all;
   line-height: 25px;
+}
+
+.inbox-panel {
+  border-color: #d42525;
+  color: #d42525;
+  transition: 0.6s all;
+}
+
+.inbox-panel:hover {
+  -webkit-box-shadow: -1px 11px 71px -17px rgba(0,0,0,0.67);
+  -moz-box-shadow: -1px 11px 71px -17px rgba(0,0,0,0.67);
+  box-shadow: -1px 11px 71px -17px rgba(0,0,0,0.67);
+  transition: 0.6s all;
+  cursor: pointer;
+  color: #fff;
+  background-color: #d42525;
 }
 
 .message-panel {
